# youbot-rs

./: AGENTS.md  Cargo.toml  justfile
docs/: MODULES.md  PRD.md  acceptance.md  architecture.md  interfaces.md  milestones.md  rust_lib_choices.md
docs/adrs/: 003-youbot-owned-adapters.md
src/: adapter.rs  app.rs  coding_agent.rs  coding_agent_supervisor.rs  config.rs  conversation_store.rs  executor.rs  justfile_parser.rs  lib.rs  main.rs  models.rs  notifier.rs  openai_chat.rs  overview.rs  persistence.rs  project_registry.rs  registry.rs  router.rs  session_manager.rs  storage.rs  task_repository.rs  tmux_client.rs  tui.rs
src/application/: agent_policy.rs  context.rs  mod.rs  project_service.rs  session_review_service.rs  session_service.rs  task_service.rs
src/controllers/: add_repo.rs  home.rs  live_session.rs  mod.rs  project_detail.rs  task.rs
src/domain/: config.rs  mod.rs  project.rs  session.rs  task.rs
src/infrastructure/: captains_log_format.rs  mod.rs  notification.rs  project_catalog.rs  state_files.rs  state_history.rs  task_store.rs  tmux.rs  todo_format.rs
src/snapshots/: youbot_rs__tui__tests__active_repo_workspace.snap  youbot_rs__tui__tests__command_palette_overlay.snap  youbot_rs__tui__tests__global_chat_view.snap
src/ui/: mod.rs  session_actions.rs  state.rs
src/ui/add_repo/: handler.rs  view.rs
src/ui/home/: handler.rs  view.rs
src/ui/live_session/: handler.rs  view.rs
src/views/: add_repo.rs  home.rs  live_session.rs  project_detail.rs  task.rs
tests/: pty_smoke.rs  service_edges.rs  ui_handlers.rs  workflows.rs
(+4 files in other folders)
